--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "sirv --development --port 8000"
+    "dev": "sirv --dev --port 8000 --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "gulp": "^4.0.2",
     "sass": "^1.32.13",
     "sirv": "^1.0.11",
     "sirv-cli": "^1.0.11",
